# slack_bot_mobbin_gpt

./: .gitignore  README.md  bot.py  pyproject.toml
