[project]
name = "slack-bot-mobbin-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2025.11.12",
    "google-genai>=1.51.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.2.1",
    "slack-bolt>=1.27.0",
    "slack-sdk>=3.38.0",
]
